# lnkr

./: Cargo.toml  LICENSE  Linkr.yaml  README.md
src/: config.rs  home_dir.rs  linking.rs  main.rs
